[gd_scene load_steps=6 format=3 uid="uid://cw0dx3phrq4iu"]

[ext_resource type="Script" uid="uid://b7x4w0f8pdegh" path="res://scenes/ui/upgrades/upgrade_card.gd" id="1_fd2m1"]
[ext_resource type="StyleBox" uid="uid://b8f1yuybm4wml" path="res://styles/common_style.tres" id="1_ux013"]
[ext_resource type="Texture2D" uid="uid://dn68qq5evmvwa" path="res://assets/sprites/Upgrades/12.png" id="2_tf707"]
[ext_resource type="PackedScene" uid="uid://dep0tblwkko8c" path="res://scenes/ui/custom_button/custom_button.tscn" id="4_4ru3d"]

[sub_resource type="LabelSettings" id="LabelSettings_4ru3d"]
font_size = 32

[node name="UpgradeCard" type="Panel"]
custom_minimum_size = Vector2(300, 220)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = ExtResource("1_ux013")
script = ExtResource("1_fd2m1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="MarginContainer/Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_tf707")
expand_mode = 1
stretch_mode = 5

[node name="ItemName" type="Label" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 86.0
offset_bottom = 48.6667
grow_horizontal = 2
text = "damage"
label_settings = SubResource("LabelSettings_4ru3d")

[node name="ItemDescription" type="Label" parent="MarginContainer/Control"]
modulate = Color(0.827451, 0.909804, 0.172549, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 60.0
offset_right = 86.0
offset_bottom = 98.6667
grow_horizontal = 2
text = "+1"
label_settings = SubResource("LabelSettings_4ru3d")

[node name="CustomButton" parent="MarginContainer/Control" instance=ExtResource("4_4ru3d")]
layout_mode = 0
anchors_preset = 0
